1. Метод .of [#442615]